Revert "fix(core-paragraph): prevent overflow on ie11"
This reverts commit 5ce482efc9686f69aef9844651c82f28d7b4f2b9.

--- a/packages/Paragraph/Paragraph.modules.scss
+++ b/packages/Paragraph/Paragraph.modules.scss
@@ -1,7 +1,3 @@
-.base {
-  width: 100%;
-}
-
 .leftAlign {
   text-align: left;
 }
